Fixed header alignment and background color

--- a/style.css
+++ b/style.css
@@ -1,21 +1,27 @@
 body{
-    background-color: rgb(240, 250, 250);
+    background-color: #a1efe0;
     margin: 0;
     height: 100vh;
 }
+
+#header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+}
+
 #up_img{
     height: 50px;
-    border-radius: 70px;
-    align-items: center;
-    transform: translateX(720px);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    margin-bottom: 10px;
 }
-#h1{
+
+#h1, #p1{
     text-align: center;
 }
-#p1{
-    text-align: center;
-}
+
 #box1{
     height: 350px;
     width: 750px;
@@ -40,7 +46,7 @@ body{
     border: 1.5px dashed grey;
     align-content: center;
 }
-#sd_to_cld{
+.sd_to_cld{
     height: 50px;
     border-radius: 70px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -52,21 +58,25 @@ body{
     background-color: blue;
     color: white;
 }
-#p2{
+.p2{
     color: rgb(99, 96, 96);
 }
 #box3{
     height: 150px;
     width: 750px;
     background-color: white;
-    display: flex;
+    /*display: flex;*/
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 50%;
     left: 50%;
-    margin:310px auto;
+    margin:270px auto;
     transform: translate(-50%, -50%);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    display: grid;
+    place-items: center;
+    color: black;
+    align-content: center;
     
 }
